--- a/src/main/resources/templates/html/password-find.html
+++ b/src/main/resources/templates/html/password-find.html
@@ -70,7 +70,7 @@
                 </div>
                 <!-- End of Form -->
 
-                <button type="submit" class="btn btn-block btn-primary" id="sendResetPasswordLink">
+                <button type="submit" class="btn btn-block btn-primary" id="send-reset-password">
                   Send reset password link
                 </button>
                 <div class="form-group">
