--- a/src/main/resources/templates/html/sign-in.html
+++ b/src/main/resources/templates/html/sign-in.html
@@ -82,7 +82,7 @@
                     </div>
                   </div>
                 </div>
-                <button type="submit" class="btn btn-block btn-primary">
+                <button type="submit" id="sign-in" class="btn btn-block btn-primary">
                   Sign in
                 </button>
               </form>
