--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Schedule.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Schedule.html
@@ -48,25 +48,13 @@
 
             </a>
             <div>
-                <button class="btn mb-2 mr-2 btn-white" type="button">MY PAGE</button>
-                <a href="./sign-in.html">
-                    <button class="btn mb-2 mr-2 btn-secondary" type="button">SIGN
-                        IN
-                    </button>
-                </a>
+                <a href="#"><button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button></a>
+                <a href="#"><button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN OUT</button></a>
             </div>
         </div>
     </nav>
 </section>
 <main>
-
-    <!-- <div class="preloader bg-dark flex-column justify-content-center align-items-center">
-<div class="position-relative">
-    <img src="../../assets/img/brand/light-without-letter.svg" alt="Logo loader">
-    <img src="../../assets/img/brand/letter.svg" class="rotate-letter" alt="Letter loader">
-</div>
-</div> -->
-
     <div class="section section-lg bg-soft" style="min-height: 100vh;">
         <div class="container">
             <div class="row pt-5 pt-md-0">
@@ -76,9 +64,8 @@
                     <div class="card border-light p-2">
                         <div class="card-body p-2">
                             <div class="profile-thumbnail small-thumbnail mx-auto">
-
                             </div>
-                            <h2 class="h5 font-weight-normal text-center mt-3 mb-0">이연우</h2>
+                            <h2 class="h5 font-weight-normal text-center mt-3 mb-0" id="tutee-name">이연우</h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
                                 <a href="myPage-tutees_Information.html"
                                    class="d-flex list-group-item list-group-item-action ">회원 정보<span
@@ -96,45 +83,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 d-lg-none">
-                    <div class="card bg-white border-light mb-4 mb-lg-5">
-                        <div class="card-body">
-                            <div class="row align-items-center">
-                                <div class="col-10 d-flex">
-                                    <a href="myPage-tutees_Information.html"
-                                       class="list-group-item list-group-item-action  d-none d-sm-block border-0 ">회원
-                                        정보</a>
-                                    <a href="myPage-tutees_Schedule.html"
-                                       class="list-group-item list-group-item-action border-0 active ">수업 일정</a>
-                                    <a href="myPage-tutees_CourseHistory.html"
-                                       class="list-group-item list-group-item-action d-none d-md-block border-0 ">히스토리
-                                        정보</a>
-                                </div>
-                                <div class="col-2 d-flex justify-content-center">
-                                    <div class="btn-group dropleft">
-                                        <button
-                                                class="btn btn-link dropdown-toggle dropdown-toggle-split mr-2 m-0 p-0"
-                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                <span class="icon icon-sm">
-                                                    <span class="fas fa-ellipsis-h icon-secondary fa-lg"></span>
-                                                </span>
-                                            <span class="sr-only">Toggle Dropdown</span>
-                                        </button>
-                                        <div class="dropdown-menu">
-                                            <a href="myPage-tutees_Information.html"
-                                               class="list-group-item list-group-item-action d-sm-none border-0 ">회원
-                                                정보</a>
-                                            <a href="myPage-tutees_CourseHistory.html"
-                                               class="list-group-item list-group-item-action d-md-none border-0 ">히스토리
-                                                정보</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="col-12 col-lg-8">
                     <div class="row">
                         <div class="col-lg-12">
@@ -151,17 +99,17 @@
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <c:forEach items="${}" var="dto">
+                                        <c:forEach items="${}" var="dto" id="tutee-schedule">
                                             <tr>
-                                                <th scope="row">
+                                                <th scope="row" id="tno">
                                                     <c:out value="${dto.tno}"/>
                                                     1
                                                 </th>
-                                                <td>
+                                                <td id="reservation-date">
                                                     <c:out value="${dto.dueDate}"/>
                                                     2020-04-13 11:00AM
                                                 </td>
-                                                <td>
+                                                <td id="tutor-name">
                                                     <c:out value="${dto.writer}"/>
                                                     Neil Sam
                                                 </td>
@@ -187,19 +135,19 @@
                                                                 <div class="modal-body">
                                                                     <form>
                                                                         <div class="mb-3">
-                                                                            <label for="cancelReservationMessage"
+                                                                            <label for="cancel-reservation-massage"
                                                                                    class="col-form-label">"예약을
                                                                                 취소하겠습니다"를 입력해주세요</label>
                                                                             <input type="text"
                                                                                    class="form-control"
-                                                                                   id="cancelReservationMessage"
+                                                                                   id="cancel-reservation-massage"
                                                                                    style="border-color: rgb(141, 140, 140);"
                                                                                    autocomplete="off"/>
                                                                         </div>
                                                                     </form>
                                                                 </div>
                                                                 <div class="modal-footer">
-                                                                    <button type="submit" id="cancelReservation"
+                                                                    <button type="submit" id="cancel-reservation"
                                                                             class="btn btn-sm btn-secondary">
                                                                         예약취소
                                                                     </button>
