--- a/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
@@ -114,7 +114,7 @@
                                                     <c:out value="${dto.writer}"/>
                                                     Nail Sam
                                                 </td>
-                                                <td id="mamo">
+                                                <td id="memo">
                                                     <c:out value="${dto.finished}"/>
                                                     txt
                                                 </td>
